--- a/Listing_2.2.ipynb
+++ b/Listing_2.2.ipynb
@@ -1,46 +1,52 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Listing XX\n",
-    "\n",
-    "To run the ASP program, click on the first cell and then on `Run` (or press `Ctrl+Enter`). The result will be printed below the cell.\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-:3:14-15: info: atom does not occur in any rule head:\n",
-      "  d\n",
-      "\n",
-      "-:4:4-5: info: atom does not occur in any rule head:\n",
-      "  d\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b c a\n",
-      "SATISFIABLE\n"
+      "\n",
+      "Optimization: 0\n",
+      "sel_pert(c3,g1,1,late_TE)\n",
+      "Optimization: -1\n",
+      "sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE)\n",
+      "Optimization: -2\n",
+      "sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Optimization: -3\n",
+      "sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Optimization: -4\n",
+      "OPTIMUM FOUND\n"
      ]
     }
    ],
    "source": [
     "%%clingo -V0 0\n",
-    "a.              % A fact\n",
-    "b.              % A fact\n",
-    "c :- b ; not d. % A rule\n",
-    ":- d.          % An integrity constraint"
+    "cell(c1).\n",
+    "cell(c2).\n",
+    "cell(c3).\n",
+    "class(early_TE).\n",
+    "class(medium_TE).\n",
+    "class(late_TE).\n",
+    "be_part(c1,early_TE).\n",
+    "be_part(c2,medium_TE).\n",
+    "be_part(c3,late_TE).\n",
+    "gene(g1).\n",
+    "gene(g2).\n",
+    "expr(c1,g1,0).\n",
+    "expr(c1,g2,0).\n",
+    "expr(c2,g1,0).\n",
+    "expr(c2,g2,1).\n",
+    "expr(c3,g1,1).\n",
+    "expr(c3,g2,1).\n",
+    "pert(C,G,S,CL) :- expr(C,G,S), cell(C), gene(G), be_part(C,CL).\n",
+    "{sel_pert(C,G,S,CL) : pert(C,G,S,CL)}.\n",
+    ":- sel_pert(_,_,_,early_TE).\n",
+    "#maximize{1,C,G: sel_pert(C,G,_,_), pert(C,G,_,_)}.\n",
+    "#show sel_pert/4.\n"
    ]
   }
  ],
