--- a/Listing_2.2.ipynb
+++ b/Listing_2.2.ipynb
@@ -1,30 +1,140 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Listing 2.2\n",
+    "\n",
+    "To run the ASP program, click on the first cell and then on `Run` (or press `Ctrl+Enter`). The result will be printed below the cell."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "clingo version 5.4.1\n",
+      "Reading from stdin\n",
+      "Solving...\n",
+      "Answer: 1\n",
       "\n",
-      "Optimization: 0\n",
+      "Answer: 2\n",
       "sel_pert(c3,g1,1,late_TE)\n",
-      "Optimization: -1\n",
+      "Answer: 3\n",
+      "sel_pert(c2,g2,1,medium_TE)\n",
+      "Answer: 4\n",
       "sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE)\n",
-      "Optimization: -2\n",
+      "Answer: 5\n",
+      "sel_pert(c3,g2,1,late_TE)\n",
+      "Answer: 6\n",
+      "sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Answer: 7\n",
+      "sel_pert(c3,g1,1,late_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Answer: 8\n",
       "sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
-      "Optimization: -3\n",
+      "Answer: 9\n",
+      "sel_pert(c2,g1,0,medium_TE)\n",
+      "Answer: 10\n",
+      "sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g1,1,late_TE)\n",
+      "Answer: 11\n",
+      "sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Answer: 12\n",
+      "sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g1,1,late_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Answer: 13\n",
+      "sel_pert(c2,g1,0,medium_TE) sel_pert(c2,g2,1,medium_TE)\n",
+      "Answer: 14\n",
+      "sel_pert(c2,g1,0,medium_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Answer: 15\n",
+      "sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE)\n",
+      "Answer: 16\n",
       "sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
-      "Optimization: -4\n",
-      "OPTIMUM FOUND\n"
+      "SATISFIABLE\n",
+      "\n",
+      "Models       : 16\n",
+      "Calls        : 1\n",
+      "Time         : 0.002s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
+      "CPU Time     : 0.002s\n"
      ]
     }
    ],
    "source": [
-    "%%clingo -V0 0\n",
+    "%%clingo 0\n",
+    "cell(c1).\n",
+    "cell(c2).\n",
+    "cell(c3).\n",
+    "class(early_TE).\n",
+    "class(medium_TE).\n",
+    "class(late_TE).\n",
+    "be_part(c1,early_TE).\n",
+    "be_part(c2,medium_TE).\n",
+    "be_part(c3,late_TE).\n",
+    "gene(g1).\n",
+    "gene(g2).\n",
+    "expr(c1,g1,0).\n",
+    "expr(c1,g2,0).\n",
+    "expr(c2,g1,0).\n",
+    "expr(c2,g2,1).\n",
+    "expr(c3,g1,1).\n",
+    "expr(c3,g2,1).\n",
+    "pert(C,G,S,CL) :- expr(C,G,S), cell(C), gene(G), be_part(C,CL).\n",
+    "{sel_pert(C,G,S,CL) : pert(C,G,S,CL)}.\n",
+    ":- sel_pert(_,_,_,early_TE).\n",
+    "\n",
+    "#show sel_pert/4.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can observe $16$ answer sets, all respecting the rules and constraints of the program."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clingo version 5.4.1\n",
+      "Reading from stdin\n",
+      "Solving...\n",
+      "Answer: 1\n",
+      "\n",
+      "Optimization: 0\n",
+      "Answer: 2\n",
+      "sel_pert(c3,g1,1,late_TE)\n",
+      "Optimization: -1\n",
+      "Answer: 3\n",
+      "sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE)\n",
+      "Optimization: -2\n",
+      "Answer: 4\n",
+      "sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Optimization: -3\n",
+      "Answer: 5\n",
+      "sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)\n",
+      "Optimization: -4\n",
+      "OPTIMUM FOUND\n",
+      "\n",
+      "Models       : 5\n",
+      "  Optimum    : yes\n",
+      "Optimization : -4\n",
+      "Calls        : 1\n",
+      "Time         : 0.001s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
+      "CPU Time     : 0.001s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%clingo  0\n",
     "cell(c1).\n",
     "cell(c2).\n",
     "cell(c3).\n",
@@ -47,6 +157,17 @@
     ":- sel_pert(_,_,_,early_TE).\n",
     "#maximize{1,C,G: sel_pert(C,G,_,_), pert(C,G,_,_)}.\n",
     "#show sel_pert/4.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The solver gives `OPTIMUM FOUND` meaning that an optimal answer set is found. This answer is the last found, here: \n",
+    "\n",
+    "```sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)```\n",
+    "\n",
+    "This answer is the one comprising the maximal number of `sel_pert/4` predicate."
    ]
   }
  ],
