--- a/Illustration_2.1.ipynb
+++ b/Illustration_2.1.ipynb
@@ -4,43 +4,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Listing XX\n",
+    "# Listing 2.1\n",
     "\n",
     "To run the ASP program, click on the first cell and then on `Run` (or press `Ctrl+Enter`). The result will be printed below the cell.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-:3:14-15: info: atom does not occur in any rule head:\n",
-      "  d\n",
-      "\n",
-      "-:4:4-5: info: atom does not occur in any rule head:\n",
-      "  d\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b c a\n",
+      "clingo version 5.4.1\n",
+      "Reading from stdin\n",
+      "Solving...\n",
+      "Answer: 1\n",
+      "bird(casper) bird(ricky) neg_fly(casper) fly(ricky) eagle(ricky) penguin(casper)\n",
+      "SATISFIABLE\n",
+      "\n",
+      "Models       : 1\n",
+      "Calls        : 1\n",
+      "Time         : 0.000s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
+      "CPU Time     : 0.000s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%clingo -n 0\n",
+    "% This is a comment in ASP\n",
+    "% Problem encoding\n",
+    "fly(X)     :- bird(X), not neg_fly(X).\n",
+    "bird(X)    :- eagle(X).\n",
+    "bird(X)    :- penguin(X).\n",
+    "neg_fly(X) :- penguin(X).\n",
+    "% Problem instance\n",
+    "eagle(ricky).\n",
+    "penguin(casper)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clingo version 5.4.1\n",
+      "Reading from stdin\n",
+      "Solving...\n",
+      "Answer: 1\n",
+      "bird(casper) bird(ricky) fly(ricky)\n",
+      "SATISFIABLE\n",
+      "\n",
+      "Models       : 1\n",
+      "Calls        : 1\n",
+      "Time         : 0.000s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
+      "CPU Time     : 0.000s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%clingo -n 0\n",
+    "\n",
+    "% Problem encoding\n",
+    "fly(X)     :- bird(X), not neg_fly(X).\n",
+    "bird(X)    :- eagle(X).\n",
+    "bird(X)    :- penguin(X).\n",
+    "neg_fly(X) :- penguin(X).\n",
+    "% Problem instance\n",
+    "eagle(ricky).\n",
+    "penguin(casper).\n",
+    "% Display\n",
+    "#show bird/1.\n",
+    "#show fly/1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bird(darla) bird(casper) bird(ricky) fly(darla) fly(ricky)\n",
       "SATISFIABLE\n"
      ]
     }
    ],
    "source": [
     "%%clingo -V0 0\n",
-    "a.              % A fact\n",
-    "b.              % A fact\n",
-    "c :- b ; not d. % A rule\n",
-    ":- d.          % An integrity constraint"
+    "\n",
+    "% Problem encoding\n",
+    "fly(X)     :- bird(X), not neg_fly(X).\n",
+    "bird(X)    :- eagle(X).\n",
+    "bird(X)    :- penguin(X).\n",
+    "neg_fly(X) :- penguin(X).\n",
+    "% Problem instance\n",
+    "eagle(ricky).\n",
+    "penguin(casper).\n",
+    "% Display\n",
+    "#show bird/1.\n",
+    "#show fly/1.\n",
+    "% Extension\n",
+    "hen(darla).\n",
+    "bird(X)    :- hen(X).\n",
+    "% neg_fly(X) :- hen(X). % A han cannot fly [or not; with a comment]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bird(darla) bird(casper) bird(ricky) fly(ricky)\n",
+      "SATISFIABLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%clingo -V0 0\n",
+    "\n",
+    "% Problem encoding\n",
+    "fly(X)     :- bird(X), not neg_fly(X).\n",
+    "bird(X)    :- eagle(X).\n",
+    "bird(X)    :- penguin(X).\n",
+    "neg_fly(X) :- penguin(X).\n",
+    "% Problem instance\n",
+    "eagle(ricky).\n",
+    "penguin(casper).\n",
+    "% Display\n",
+    "#show bird/1.\n",
+    "#show fly/1.\n",
+    "% Extension\n",
+    "hen(darla).\n",
+    "bird(X)    :- hen(X).\n",
+    "neg_fly(X) :- hen(X). % A han cannot fly [or not; with a comment]"
    ]
   }
  ],
