--- a/Illustration_2.1.ipynb
+++ b/Illustration_2.1.ipynb
@@ -86,20 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "clingo version 5.4.1\n",
+      "Reading from stdin\n",
+      "Solving...\n",
+      "Answer: 1\n",
       "bird(darla) bird(casper) bird(ricky) fly(darla) fly(ricky)\n",
-      "SATISFIABLE\n"
+      "SATISFIABLE\n",
+      "\n",
+      "Models       : 1\n",
+      "Calls        : 1\n",
+      "Time         : 0.000s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
+      "CPU Time     : 0.000s\n"
      ]
     }
    ],
    "source": [
-    "%%clingo -V0 0\n",
+    "%%clingo -n 0\n",
     "\n",
     "% Problem encoding\n",
     "fly(X)     :- bird(X), not neg_fly(X).\n",
@@ -115,25 +124,34 @@
     "% Extension\n",
     "hen(darla).\n",
     "bird(X)    :- hen(X).\n",
-    "% neg_fly(X) :- hen(X). % A han cannot fly [or not; with a comment]"
+    "% neg_fly(X) :- hen(X). % A hen cannot fly [or not; with a comment]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "clingo version 5.4.1\n",
+      "Reading from stdin\n",
+      "Solving...\n",
+      "Answer: 1\n",
       "bird(darla) bird(casper) bird(ricky) fly(ricky)\n",
-      "SATISFIABLE\n"
+      "SATISFIABLE\n",
+      "\n",
+      "Models       : 1\n",
+      "Calls        : 1\n",
+      "Time         : 0.001s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
+      "CPU Time     : 0.001s\n"
      ]
     }
    ],
    "source": [
-    "%%clingo -V0 0\n",
+    "%%clingo -n 0\n",
     "\n",
     "% Problem encoding\n",
     "fly(X)     :- bird(X), not neg_fly(X).\n",
@@ -149,7 +167,7 @@
     "% Extension\n",
     "hen(darla).\n",
     "bird(X)    :- hen(X).\n",
-    "neg_fly(X) :- hen(X). % A han cannot fly [or not; with a comment]"
+    "neg_fly(X) :- hen(X). % A hen cannot fly [or not; with a comment]"
    ]
   }
  ],
