--- a/Illustration_2.2.ipynb
+++ b/Illustration_2.2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57,13 +57,13 @@
       "\n",
       "Models       : 16\n",
       "Calls        : 1\n",
-      "Time         : 0.002s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
-      "CPU Time     : 0.002s\n"
+      "Time         : 0.004s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
+      "CPU Time     : 0.001s\n"
      ]
     }
    ],
    "source": [
-    "%%clingo 0\n",
+    "%%clingo -n 0\n",
     "cell(c1).\n",
     "cell(c2).\n",
     "cell(c3).\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "%%clingo  0\n",
+    "%%clingo -n 0\n",
     "cell(c1).\n",
     "cell(c2).\n",
     "cell(c3).\n",
