--- a/Illustration_2.2.ipynb
+++ b/Illustration_2.2.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Listing 2.2\n",
+    "# Illustration of the Program 2.2\n",
     "\n",
-    "To run the ASP program, click on the first cell and then on `Run` (or press `Ctrl+Enter`). The result will be printed below the cell."
+    "In this notebook, we provide an illustrative approach to better understand the Program 2.2 presented in the manuscript.\n",
+    "\n",
+    "**Tips**: to run an ASP program, click on the cell and then on `Run` (or press `Ctrl+Enter`). The result will be printed below the cell.\n"
    ]
   },
   {
@@ -57,25 +59,25 @@
       "\n",
       "Models       : 16\n",
       "Calls        : 1\n",
-      "Time         : 0.004s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
+      "Time         : 0.001s (Solving: 0.00s 1st Model: 0.00s Unsat: 0.00s)\n",
       "CPU Time     : 0.001s\n"
      ]
     }
    ],
    "source": [
     "%%clingo -n 0\n",
-    "cell(c1).\n",
+    "cell(c1).               % c1 is a cell\n",
     "cell(c2).\n",
     "cell(c3).\n",
-    "class(early_TE).\n",
+    "class(early_TE).        % early_TE is a class\n",
     "class(medium_TE).\n",
     "class(late_TE).\n",
-    "be_part(c1,early_TE).\n",
+    "be_part(c1,early_TE).   % c1 belongs to early_TE class\n",
     "be_part(c2,medium_TE).\n",
     "be_part(c3,late_TE).\n",
-    "gene(g1).\n",
+    "gene(g1).               % g1 is a gene\n",
     "gene(g2).\n",
-    "expr(c1,g1,0).\n",
+    "expr(c1,g1,0).          % g1 gene is expressed at 0 in c1 cell\n",
     "expr(c1,g2,0).\n",
     "expr(c2,g1,0).\n",
     "expr(c2,g2,1).\n",
@@ -85,14 +87,18 @@
     "{sel_pert(C,G,S,CL) : pert(C,G,S,CL)}.\n",
     ":- sel_pert(_,_,_,early_TE).\n",
     "\n",
-    "#show sel_pert/4.\n"
+    "#show sel_pert/4."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can observe $16$ answer sets, all respecting the rules and constraints of the program."
+    "We can observe $16$ solutions (`Models: 16`), all respecting the rules and constraints of the program.\n",
+    "\n",
+    "However, our goal is to identify all possible perturbations for the cells present in medium and late TE. \n",
+    "To achieve this, we aim to maximize the number of possible perturbations. \n",
+    "For that, we add the maximization statement in line 22, in the following program (see next cell)."
    ]
   },
   {
@@ -135,18 +141,18 @@
    ],
    "source": [
     "%%clingo -n 0\n",
-    "cell(c1).\n",
+    "cell(c1).               % c1 is a cell\n",
     "cell(c2).\n",
     "cell(c3).\n",
-    "class(early_TE).\n",
+    "class(early_TE).        % early_TE is a class\n",
     "class(medium_TE).\n",
     "class(late_TE).\n",
-    "be_part(c1,early_TE).\n",
+    "be_part(c1,early_TE).   % c1 belongs to early_TE class\n",
     "be_part(c2,medium_TE).\n",
     "be_part(c3,late_TE).\n",
-    "gene(g1).\n",
+    "gene(g1).               % g1 is a gene\n",
     "gene(g2).\n",
-    "expr(c1,g1,0).\n",
+    "expr(c1,g1,0).          % g1 gene is expressed at 0 in c1 cell\n",
     "expr(c1,g2,0).\n",
     "expr(c2,g1,0).\n",
     "expr(c2,g2,1).\n",
@@ -156,7 +162,7 @@
     "{sel_pert(C,G,S,CL) : pert(C,G,S,CL)}.\n",
     ":- sel_pert(_,_,_,early_TE).\n",
     "#maximize{1,C,G: sel_pert(C,G,_,_), pert(C,G,_,_)}.\n",
-    "#show sel_pert/4.\n"
+    "#show sel_pert/4."
    ]
   },
   {
@@ -167,7 +173,7 @@
     "\n",
     "```sel_pert(c2,g1,0,medium_TE) sel_pert(c3,g1,1,late_TE) sel_pert(c2,g2,1,medium_TE) sel_pert(c3,g2,1,late_TE)```\n",
     "\n",
-    "This answer is the one comprising the maximal number of `sel_pert/4` predicate."
+    "This answer is the one comprising the maximal number of `sel_pert/4` predicates."
    ]
   }
  ],
