--- a/Illustration_4.1.ipynb
+++ b/Illustration_4.1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this notebook, we provide an explanation with a toy example of the *Constraint 2* forbidding potential redundancies in a cell class (see Section 4.2.3 of the manuscript).\n",
     "\n",
-    "In the figure bellow, we recapitulate presented patterns of redundancies in the manuscript, as known V-patterns, parallel-patterns and cross-patterns.\n",
+    "In the figure below, we recapitulate presented patterns of redundancies in the manuscript, as known V-patterns, parallel-patterns and cross-patterns.\n",
     "\n",
     "![Redundant patterns](./figs/redundant_patterns.png)\n",
     "\n",
